# TuiTextEditor

./: CMakeLists.txt  a.exe.stackdump  a.out  index.cpp  namespace.cpp  namespace.hpp  resource.cpp  resource.hpp  src  test.cpp
cmake/: CMakeLists.txt
include/: namespace.hpp  resource.hpp
src/: namespace.cpp  resource.cpp
